[tool.poetry]
name = "k-r-1"
version = "0.1.0"
description = ""
authors = ["Your Name <safin@example.com>"]
readme = "README.md"
packages = [{include = "d"}]

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.2.1"
requests = "^2.32.5"
pandas = "^2.3.3"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"

mypy = "^1.13.0"
[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

black = "^24.10.0"
[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

isort = "^5.13.2"
[tool.isort]
# максимальная длина строки
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
